feat: expand 5 expert skills with code examples, decision trees, and operational workflows
- bazel-expert (42→299 lines): Add BUILD.bazel examples, rules_java toolchain
  setup, rules_jvm_external with BOM, custom Provider/depset patterns,
  performance decision tree, remote cache config, 5 troubleshooting scenarios
- java-expert (65→343 lines): Add Virtual Threads patterns/anti-patterns,
  Records with validation, Pattern Matching (instanceof + switch), Sealed
  Classes domain modeling, Java 11/17→21 migration guide with code examples
- maven-expert (49→368 lines): Add complete Quarkus pom.xml, multi-module
  parent POM, dependency scope decision tree, 3-step version conflict
  resolution workflow, 5 common errors with fixes
- gradle-expert (50→380 lines): Add Quarkus build.gradle.kts, multi-module
  with Version Catalog, dependency config decision tree, version conflict
  workflow, 5 common errors, slow build diagnostic checklist
- rules-quarkus (122→760 lines): Add full operational workflow (setup, build,
  run, test), agent behavior directives for consulting source repo, deployment
  exclusions from actual MODULE.bazel, main_class requirement, .bazelrc config,
  deps vs runtime_extensions vs deployment_extensions explanation, escalation
  path for troubleshooting (read source → check issues → file issue)

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>